@@ -7,6 +7,8 @@ byobu (5.95) unreleased; urgency=medium
     - ensure we start tmux with unicode support, LP: #1268072
   * usr/bin/byobu.in, usr/share/man/man1/byobu.1: LP: #1483394
     - byobu -h|--help enters manpage
+  * usr/bin/byobu-shell.in: LP: #1458941
+    - find the motd
 
   [ Fortunato Ventre ]
   * usr/lib/byobu/include/constants:
